--- a/index.html
+++ b/index.html
@@ -2,88 +2,112 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- build:css css/main.css -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <!-- endbuild --> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <!-- Title -->
     <title>Tiffany Mollica</title>
 </head>
 
 <body>
-
-    <header>
-        <div>
-            <h1>Tiffany Mollica</h1>
-            <h2>blood type: be positive</h2>
+<!-- Header -->
+    <header class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>Tiffany Mollica</h1>
+                    <h4>blood type: be positive :)</h4>
+                </div>
+            </div>
         </div>
     </header>
-
-    <div>
-        <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Coding</a></li>
-            <li><a href="#">Coding Portfolio</a></li>
-            <li><a href="#">Cake Decorator</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
-
-    <div>
-      <h2>About</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-      <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-    </div>
-
-    <div>
-        <h2>Coding</h2>
-        <h3>Education</h3>
-          <div>
-            <h3>NuCamp</h3>
-              <p>About..... courses took ect</p>
-              <div>certs here</div>
-          </div>
-          <div>
-            <h3>Udemy</h3>
-              <p>About... courses took ect</p>
-              <div>certs here</div>
-          </div>
-    </div>
-
-    <div>
-        <h2>Coding Portfolio</h2>
-          <h3>Projects</h3>
-          <div>project 1</div>
-          <div>project 2</div>
-          <div>project 3</div>
-    </div>
-
-    <div>
-        <h2>Cake Decorator</h2>
-          <h3>Education</h3>
-            <p>About..... courses took ect</p>
-            <div>certs here</div>
-          <h3>Jobs</h3>
-            <div>job 1</div>
-            <div>job 2</div>
-            <div>job 3</div>
-          <h3>Cake Portfolio</h3>
-            <div>pics</div>
-            <div>pics</div>
-            <div>pics</div>
-    </div>
-
-    <div>
-      <h2>Contact</h2>
-        <div>email</div>
-        <div>phone</div>
-    </div>
-
-    <footer>
-
-        <div>
-            <h5>Social</h5>
-            <a href="#">GitHub</a>
-            <a href="#">LinkedIn</a>
+<!-- Nav Bar -->
+    <nav class="navbar navbar-expand-sm navbar-light sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bakeryNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="bakeryNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-question-circle fa-lg"></i> Coding</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-birthday-cake fa-lg"></i> Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-shopping-cart fa-lg"></i> Cake Decorator</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                </ul>
+            </div>
         </div>
-    </footer>
-
+    </nav>
+<!-- Home -->
+    <div class="container boxStyle">
+        <div class="row">
+            <div class="col">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+            </div>
+        </div>
+    </div>
+        <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
+                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+            </div>
+        </div>
+    </div>
+<!-- Footer -->
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm mb-3 text-center">
+                <h5><strong>Social</strong></h5>
+                <a class="btn btn-social-icon btn-flickr" href="#"><i class="fa fa-flickr">Github</i></a>
+                <a class="btn btn-social-icon btn-instagram" href="#"><i class="fa fa-instagram">LinkedIn</i></a>
+            </div>
+            <div class="col-sm text-center">
+                <h5><strong>Contact</strong></h5>
+                <a role="button" class="btn btn-link" href="tel:+8675309"><i class="fa fa-phone"></i> 867-5309</a><br>
+                <a role="button" class="btn btn-link" href="mailto:info@edibledelights.com"><i class="fa fa-envelope"></i> info@tiffanymollica.com</a>
+            </div>
+        </div>
+    </div>
+</footer>
+    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
