--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="collapse navbar-collapse" id="bakeryNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-question-circle fa-lg"></i> Coding</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-birthday-cake fa-lg"></i> Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-shopping-cart fa-lg"></i> Cake Decorator</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-code fa-lg"></i> Coding</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-file-code fa-lg"></i> Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-birthday-cake fa-lg"></i> Cake Decorator</a></li>
                     <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
@@ -67,38 +67,19 @@
             </div>
         </div>
     </div>
-        <div class="container">
-        <div class="row">
-            <div class="col">
-                <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-            </div>
-        </div>
-    </div>
 <!-- Footer -->
 <footer class="site-footer">
     <div class="container">
         <div class="row">
             <div class="col-sm mb-3 text-center">
                 <h5><strong>Social</strong></h5>
-                <a class="btn btn-social-icon btn-flickr" href="#"><i class="fa fa-flickr">Github</i></a>
-                <a class="btn btn-social-icon btn-instagram" href="#"><i class="fa fa-instagram">LinkedIn</i></a>
+                <a class="btn btn-social-icon btn-github" href="#"><i class="fa fa-github">Github</i></a>
+                <a class="btn btn-social-icon btn-linkedin" href="#"><i class="fa fa-linkedin">LinkedIn</i></a>
+                <a class="btn btn-social-icon btn-flickr" href="#"><i class="fa fa-flickr">Flickr</i></a>
             </div>
             <div class="col-sm text-center">
                 <h5><strong>Contact</strong></h5>
-                <a role="button" class="btn btn-link" href="tel:+8675309"><i class="fa fa-phone"></i> 867-5309</a><br>
+                <a role="button" class="btn btn-link" href="tel:+8675309"><i class="fa fa-phone"></i> 867-5309</a>
                 <a role="button" class="btn btn-link" href="mailto:info@edibledelights.com"><i class="fa fa-envelope"></i> info@tiffanymollica.com</a>
             </div>
         </div>
