--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             </button>
             <div class="collapse navbar-collapse" id="bakeryNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-code fa-lg"></i> Coding</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-file-code fa-lg"></i> Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-birthday-cake fa-lg"></i> Cake Decorator</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""> Coding</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""> Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""> Cake Decorator</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -50,23 +50,14 @@
     <div class="container boxStyle">
         <div class="row">
             <div class="col">
-                <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <img src="img/profilepic.png" height="250">
             </div>
-        </div>
-        <div class="row">
             <div class="col">
                 <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</div>
+                <div>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</div>
             </div>
         </div>
-    </div>
 <!-- Footer -->
 <footer class="site-footer">
     <div class="container">
