figured out footer issue

--- a/index.html
+++ b/index.html
@@ -46,24 +46,25 @@
             </div>
         </div>
     </nav>
-<!-- Home -->
+<!-- About -->
     <div class="container boxStyle">
         <div class="row">
             <div class="col">
-                <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <img src="img/profilepic.png" height="250">
             </div>
-        </div>
-        <div class="row">
             <div class="col">
                 <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi cum non? Laborum voluptatibus expedita animi numquam, odio sit, molestias itaque ea reprehenderit cumque, architecto a doloribus dolorem possimus rerum!</p>
-                <p>Iure incidunt harum sed fugiat saepe architecto doloremque quidem, officiis eaque corporis atque? Magnam omnis, dolores sint voluptatibus debitis temporibus, mollitia eum labore expedita officia nisi. Hic ad deleniti at.</p>
+                <div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, vitae temporibus! Commodi doloremque officiis neque labore praesentium, veritatis ex explicabo nam assumenda voluptates, vel quasi. Quos, natus maiores expedita minima possimus maxime consequatur quaerat commodi, molestias voluptas eum enim modi, voluptatum beatae esse! Neque possimus quia mollitia repellendus, debitis tempora.
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- Recent Projects -->
+    <div class="container boxStyle">
+        <div class="row">
+            <div class="col">
+                
             </div>
         </div>
     </div>
