--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col">
                     <h1>Tiffany Mollica</h1>
-                    <h4>blood type: be positive :)</h4>
+                    <h4>blood type: be positive :)</h4> <!-- alt designer, developer, dreamer -->
                 </div>
             </div>
         </div>
