--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <!-- endbuild --> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <!-- Title -->
@@ -23,7 +24,7 @@
             <div class="row">
                 <div class="col">
                     <h1>Tiffany Mollica</h1>
-                    <h4>blood type: be positive :)</h4>
+                    <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;blood type: B positive :)</h4>
                 </div>
             </div>
         </div>
@@ -39,16 +40,17 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-code fa-lg"></i> Coding</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-file-code fa-lg"></i> Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-folder fa-lg"></i> Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-birthday-cake fa-lg"></i> Cake Decorator</a></li>
                     <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-<!-- About -->
-    <div class="container boxStyle">
-        <div class="row">
+<!-- Container -->
+    <div class="container">
+<!-- About -->        
+        <div class="row boxStyle">
             <div class="col">
                 <img src="img/profilepic.png" height="250">
             </div>
@@ -59,12 +61,54 @@
                 </div>
             </div>
         </div>
-    </div>
-<!-- Recent Projects -->
-    <div class="container boxStyle">
-        <div class="row">
+<!-- Recent Projects -->        
+        <div class="row boxStyle">
+            <div class="col-12"><h2>Recent Projects</h2></div>
+<!-- 1 -->  <div class="col" id="project">
+                <div class="project-info">
+                    <img src="img/sample.png" alt="">
+                    <div class="project-title">
+                    <h3>Project Example</h3>
+                    </div>
+                    <div class="overview">
+                    <h3>Overview</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam porro corrupti cumque unde.
+                    <br><a href="#">GitHub Link</a>
+                    </div>
+                </div>
+            </div>
+<!-- 2 -->  <div class="col" id="project">
+                <div class="project-info">
+                    <img src="img/sample.png" alt="">
+                    <div class="project-title">
+                    <h3>Project Example</h3>
+                    </div>
+                    <div class="overview">
+                    <h3>Overview</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam porro corrupti cumque unde.
+                    <br><a href="#">GitHub Link</a>
+                    </div>
+                </div>
+            </div>
+<!-- 3 -->  <div class="col" id="project">
+                <div class="project-info">
+                    <img src="img/sample.png" alt="">
+                    <div class="project-title">
+                    <h3>Project Example</h3>
+                    </div>
+                    <div class="overview">
+                    <h3>Overview</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam porro corrupti cumque unde.
+                    <br><a href="#">GitHub Link</a>
+                    </div>
+                </div>
+            </div>           
+        </div>
+<!-- Connect -->
+        <div class="row boxStyle">
+            <div class="col-12"><h2>Let's Connect!</h2></div>
             <div class="col">
-                
+                <img src="img/messagepicsample.png" width="600px" alt="">
             </div>
         </div>
     </div>
